--- a/main.css
+++ b/main.css
@@ -49,6 +49,16 @@ h6 {
     top: 0;
     left: 0;
     width: 100%;
+    transition: all 0.5s;
+    color: #b7b7b7;
+}
+
+.topNavBar.sticky {
+    background: white;
+    padding: 10px 0;
+    z-index: 1;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    color: #3d4451;
 }
 
 .topNavBar-inner {
@@ -56,7 +66,7 @@ h6 {
 }
 
 .topNavBar nav {
-    padding-top: 7px;
+    padding-top: 5px;
 }
 
 .topNavBar nav>ul {
@@ -69,21 +79,71 @@ h6 {
     float: left;
     margin-left: 17px;
     margin-right: 17px;
+    position: relative;
 }
 
 .topNavBar nav>ul>li>a {
     font-size: 12px;
-    color: #878787;
     font-weight: bold;
+    color: inherit;
     border-bottom: 3px solid transparent;
     border-top: 3px solid transparent;
     padding-top: 5px;
     padding-bottom: 5px;
     display: block;
+    position: relative;
 }
 
-.topNavBar nav>ul>li>a:hover {
-    border-bottom: 3px solid #e06567;
+.topNavBar nav>ul>li.active>a::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: #e06567;
+    height: 3px;
+    animation: menuSlide 0.3s;
+}
+
+@keyframes menuSlide {
+    0% {
+        width: 0;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
+.topNavBar .submenu {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 100%;
+    background: white;
+    color: #3d4451;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.topNavBar li.active>.submenu {
+    display: block;
+    animation: submenuSlide 0.3s;
+}
+
+@keyframes submenuSlide {
+    0% {
+        margin-right: 100%;
+    }
+
+    100% {
+        margin-right: 0%;
+    }
+}
+
+.topNavBar .submenu>li {
+    white-space: nowrap;
+    padding: 5px 10px;
 }
 
 .topNavBar .logo {
