--- a/main.css
+++ b/main.css
@@ -39,6 +39,29 @@ h6 {
     clear: both;
 }
 
+[data-x].active {
+    outline: 10px solid red;
+}
+
+[data-z].offset {
+    transform: translateY(100px);
+}
+
+[data-x] {
+    transform: translateY(0);
+    transition: all 0.5s;
+}
+
+@keyframes slideUp {
+    0% {
+        transform: translateY(-30px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
 .topNavBar {
     /*padding-top: 20px;
     padding-bottom: 20px;
@@ -94,7 +117,8 @@ h6 {
     position: relative;
 }
 
-.topNavBar nav>ul>li.active>a::after {
+.topNavBar nav>ul>li.active>a::after,
+.topNavBar nav>ul>li.highlight>a::after {
     content: '';
     display: block;
     position: absolute;
@@ -347,6 +371,7 @@ section.skills .progressBar {
     background: #fae1e1;
     border-radius: 2px;
     margin: 4px 0 40px;
+    overflow: hidden;
 }
 
 section.skills .progressBar>.progress {
@@ -354,6 +379,12 @@ section.skills .progressBar>.progress {
     background: #E6686A;
     width: 70%;
     border-radius: 2px;
+    transform: translateX(0);
+    transition: all 1s;
+}
+
+section.skills.offset .progress {
+    transform: translateX(-100%);
 }
 
 section.portfolio {
